ipc/ipdl/test/ipdl/error/BadNestedManager.ipdl
include protocol BadNestedManagee;

nested(upto not) async protocol BadNestedManager {
    manages BadNestedManagee;
parent:
    async BadNestedManagee();
};
